--- a/layouts/default.html
+++ b/layouts/default.html
@@ -8,6 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <title>{{ title }}</title>
+    {{ stylesheet }}
 </head>
 <body>
 {{ html }}
